# ml-fertilizer

./: .gitignore  README.md  fbfs_cat_raw_results_backup.json  lr_sfs_final.pkl  pyproject.toml  rfe_features.json  rfe_scores.json  sfs_catboost_final.pkl  xgb_sfs_final.pkl
ml_fertilizers/: compressor.py  eda.ipynb  ensemble.py  feat.py  gpt_cleanup.py  hyper.py  run.compressed.py  run.py  setup.ipynb  utils.py
ml_fertilizers/lib/ensemble/: ensemble_optimization.py  ensemble_setup2.py
ml_fertilizers/lib/features/: FeatureCombination.py  FeatureManager.py  FeatureSet.py
ml_fertilizers/lib/logger/: __init__.py
ml_fertilizers/lib/models/: EnsembleModel2.py  ExtendedModels.py  GpuModels.py  HyperOptCombination.py  HyperOptManager.py  HyperOptResultDict.py  LGBMClassifierGPU.py  MinibatchSGD.py  ModelManager.py  NeuralNetworkCustomModel.py
ml_fertilizers/lib/optymization/: EarlyStoppingCallback.py  TrialParamWrapper.py  analysis_setup.py  hyper_setup.py  optimization_study.py  parrarel_optimization.py
ml_fertilizers/lib/pipelines/: ProcessingPipelineWrapper.py
ml_fertilizers/lib/utils/: custom_partial_fit.py  features_utils.py  garbage_collector.py  get_tscv_predictions.py  results.py  system_usage.py
