[tool.poetry]
name = "ml-fertilizers"
version = "0.1.0"
description = ""
authors = ["Damian <damian.trafialek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*" 
pandas = "^2.2.3"
matplotlib = "^3.10.0"
plotly = "^6.0.0"
xgboost = "^2.1.4"
poethepoet = "^0.32.2"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
scikit-learn = "<1.4.0"
lightgbm = {version = "^4.6.0", extras = ["gpu"]}
pytest = "^8.3.5"
playwright = "^1.52.0"
optuna-dashboard = "^0.18.0"
optuna = "4.2.1"
autofeat = "^2.1.3"
mlxtend = "^0.23.4"
ipywidgets = "^8.1.7"
catboost = "^1.2.8"
numba = "^0.61.2"
joblib = "<1.4.0"

[tool.poe.tasks]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.extras]
gpu = ["cupy", "cudf"]
